--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.6.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "mysql": "github:mysqljs/mysql",
     "node-schedule": "^1.3.2",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
