--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "rootpath": "^0.1.2",
+    "serve": "^11.3.2",
+    "serve-handler": "^6.1.3",
     "socket.io": "^2.3.0",
     "web-push": "^3.3.5"
   }
